src/content/docs/ko/manual/bluetape4k-leader/0.4/core/single-group-strategic.md
---
slug: "ko/manual/bluetape4k-leader/0.4/core/single-group-strategic"
title: "단일·그룹·전략 선출 계약"
description: "각 모델이 보장하는 범위와 애플리케이션이 별도로 맡아야 할 작업 분배를 구분합니다."
releaseRef: 0.4.0
releaseCommit: 17ab7f872c1f96318c73d3580729cac20a67e017
manual:
  id: "core/single-group-strategic"
  repository: "bluetape4k-leader"
  group: "overview"
  kind: "guide"
  sourceCommit: "9f8a2152256c1a1ccf4fdbb7d731cf7d6273d700"
  sourcePath: "docs/manual/ko/core/single-group-strategic.md"
  minorVersion: "0.4"
  releaseRef: "0.4.0"
  releaseCommit: "17ab7f872c1f96318c73d3580729cac20a67e017"
  sourceDir: "docs/manual"
  layer: "build"
---


각 모델이 보장하는 범위와 애플리케이션이 별도로 맡아야 할 작업 분배를 구분합니다.

## 단일

같은 lock name에는 규칙을 따르는 owner가 최대 하나만 존재합니다. 리스가 만료되거나 호출자가 재시도하면 업무 관점에서는 at-least-once가 될 수 있으므로 외부 효과는 멱등해야 합니다.

## 그룹

그룹은 최대 `maxLeaders`개의 독립 slot을 제공하고 `activeCount`, `availableSlots`, `isFull`을 보여 줍니다. slot은 동시 실행 수만 제한할 뿐 서로 다른 작업을 배정하지 않습니다. revoke 이벤트에서 slot을 식별하지 못하는 백엔드가 있어 group event projection의 구체적인 leader 목록은 비어 있을 수 있습니다.

## 전략

전략 선출은 후보 등록과 winner 선택을 분리합니다. FIFO, seed 기반 random, scored 전략과 idle-time, success-rate, recent-success, weighted scorer를 제공합니다. 실행 위치를 최적화하는 기능이며, 임의의 공유 쓰기에 대한 분산 lock을 자동으로 제공하지는 않습니다.

## 릴리스 소스

- [`leader-core/README.ko.md`](https://github.com/bluetape4k/bluetape4k-leader/blob/0.4.0/leader-core/README.ko.md)
- [`leader-core/src/main/kotlin/io/bluetape4k/leader/LeaderGroupState.kt`](https://github.com/bluetape4k/bluetape4k-leader/blob/0.4.0/leader-core/src/main/kotlin/io/bluetape4k/leader/LeaderGroupState.kt)
- [`leader-core/src/main/kotlin/io/bluetape4k/leader/StrategicLeaderElector.kt`](https://github.com/bluetape4k/bluetape4k-leader/blob/0.4.0/leader-core/src/main/kotlin/io/bluetape4k/leader/StrategicLeaderElector.kt)

## 이어서 읽기

- [Bluetape4k Leader 매뉴얼](/ko/manual/bluetape4k-leader/0.4/)
- [선출 모델 선택](/ko/manual/bluetape4k-leader/0.4/guides/election-model-selection/)
- [실행 API](/ko/manual/bluetape4k-leader/0.4/core/execution-apis/)
